# Anty

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  install.ps1  install.sh
src/: config.rs  main.rs  rules.rs
src/agents/: config_issues.rs  dangerous_functions.rs  mod.rs  secrets.rs
src/cli/: commands.rs  mod.rs  wizard.rs
src/engine/: file_walker.rs  mod.rs
src/report/: finding.rs  json.rs  merger.rs  mod.rs  terminal.rs
tests/fixtures/: vulnerable.js  vulnerable.py
